added social media links

--- a/events.html
+++ b/events.html
@@ -23,10 +23,10 @@
                     
                 </h4>
                 <div class="socialMedia">
-                    <img src="icons/instagram_logo.png" alt="logo">
-                    <img src="icons/whatsapp_logo.png" alt="logo">
-                    <img src="icons/facebook_logo.png" alt="logo">
-                </div>
+                  <img src="icons/instagram_logo.png" alt="logo">
+                  <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"><img src="icons/whatsapp_logo.png" alt="logo"></a>
+                  <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"><img src="icons/facebook_logo.png" alt="logo"></a>
+              </div>
             </div>
         </div>
     </nav>
