--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </h4>
                 <div class="socialMedia">
                     <img src="icons/instagram_logo.png" alt="logo">
-                    <img src="icons/whatsapp_logo.png" alt="logo">
-                    <img src="icons/facebook_logo.png" alt="logo">
+                    <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"><img src="icons/whatsapp_logo.png" alt="logo"></a>
+                    <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"><img src="icons/facebook_logo.png" alt="logo"></a>
                 </div>
             </div>
         </div>
