--- a/events.html
+++ b/events.html
@@ -23,7 +23,7 @@
                     
                 </h4>
                 <div class="socialMedia">
-                  <img src="icons/instagram_logo.png" alt="logo">
+                  <a href=""><img src="icons/instagram_logo.png" alt="logo"></a>
                   <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"><img src="icons/whatsapp_logo.png" alt="logo"></a>
                   <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"><img src="icons/facebook_logo.png" alt="logo"></a>
               </div>
