--- a/committee.html
+++ b/committee.html
@@ -4,33 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Committee</title>
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="committee.css" />
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <div class="navbarContainer">
-          <div class="logo">
-              <img src="icons/logo.png" alt="logo_image">
-              <div class="logoTitle">
-                  <h4>संगठित पत्रकार संघ, (छ.ग.)</h4>
-                  <h4>Organized Journalists Association (C.G.)</h4>
-                  <h4>रजि . क्रमां क 122202146877</h4>
-              </div>
+        <div class="logo">
+          <img src="icons/logo.png" alt="logo_image" />
+          <div class="logoTitle">
+            <h4>संगठित पत्रकार संघ, (छ.ग.)</h4>
+            <h4>Organized Journalists Association (C.G.)</h4>
+            <h4>रजि . क्रमां क 122202146877</h4>
           </div>
-          <div class="account-section">
-              <h4 class="sps-name">
-                  
-              </h4>
-              <div class="socialMedia">
-                <a href=""><img src="icons/instagram_logo.png" alt="logo"></a>
-                <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"><img src="icons/whatsapp_logo.png" alt="logo"></a>
-                <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"><img src="icons/facebook_logo.png" alt="logo"></a>
-            </div>
+        </div>
+        <div class="account-section">
+          <div class="socialMedia">
+            <a href=""><img src="icons/instagram_logo.png" alt="logo" /></a>
+            <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"
+              ><img src="icons/whatsapp_logo.png" alt="logo"
+            /></a>
+            <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"
+              ><img src="icons/facebook_logo.png" alt="logo"
+            /></a>
           </div>
+        </div>
+        <div class="menu">
+          <div class="menuOpenClose">
+            <img class="menuOpen" src="icons/menu.svg" alt="open_icon" />
+            <img class="menuClose" src="icons/close.svg" alt="close_icon" />
+          </div>
+          <div class="menuPage">
+            <a href="index.html"><h5>HOME</h5></a>
+            <a href="about.html"><h5>ABOUT</h5></a>
+            <a href="members.html"><h5>MEMBERS</h5></a>
+            <a href="committee.html"><h5>COMMITTEE</h5></a>
+            <a href="objective.html"><h5>OBJECTIVE</h5></a>
+            <a href="events.html"><h5>EVENTS</h5></a>
+            <a href="gallery.html"><h5>GALLERY</h5></a>
+            <a href="directory.html"><h5>DIRECTORY</h5></a>
+            <a href="contact.html"><h5>CONTACT</h5></a>
+          </div>
+        </div>
       </div>
-  </nav>
-  <div class="pages">
+    </nav>
+    <div class="pages">
       <a href="index.html"><h5>HOME</h5></a>
       <a href="about.html"><h5>ABOUT</h5></a>
       <a href="members.html"><h5>MEMBERS</h5></a>
@@ -40,105 +58,103 @@
       <a href="gallery.html"><h5>GALLERY</h5></a>
       <a href="directory.html"><h5>DIRECTORY</h5></a>
       <a href="contact.html"><h5>CONTACT</h5></a>
-  </div>
+    </div>
 
     <h3 class="heading">COMMITTEE</h3>
     <div class="committee-members">
-
-      <div class="member-card">
-        <img src="image/pfp.jpeg" alt="" />
-        <div class="details">
-          <div class="designation">
-            <h3>Syaappa</h3>
+      <div class="cardContainer">
+        <div class="member-card">
+          <img src="image/pfp.jpeg" alt="" />
+          <div class="details">
+            <div class="designation">
+              <h3>President</h3>
+            </div>
+            <h4>Hasmat Alam</h4>
+            <p>
+              Oversees the association's activities, representing the union in all official matters, and leading advocacy efforts.
+            </p>
           </div>
-          <h4>Hasti chudail</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-            vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
-            accusamus eius tenetur dolorum. Maxime?
-          </p>
+        </div>
+
+        <div class="member-card">
+          <img src="image/pfp.jpeg" alt="" />
+          <div class="details">
+            <div class="designation">
+              <h3>Vice President</h3>
+            </div>
+            <h4>Person</h4>
+            <p>
+              Supports the President and manages specific projects related to advocacy and representation.
+            </p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <img src="image/pfp.jpeg" alt="" />
+          <div class="details">
+            <div class="designation">
+              <h3>Secretary</h3>
+            </div>
+            <h4>Person</h4>
+            <p>
+              Administers day-to-day operations, organizes events, manages communications, and ensures adherence to the association’s objectives.
+            </p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <img src="image/pfp.jpeg" alt="" />
+          <div class="details">
+            <div class="designation">
+              <h3>Joint Secretary</h3>
+            </div>
+            <h4>Person</h4>
+            <p>
+              Assists the Secretary and steps in during their absence.
+            </p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <img src="image/pfp.jpeg" alt="" />
+          <div class="details">
+            <div class="designation">
+              <h3>Treasurer</h3>
+            </div>
+            <h4>Person</h4>
+            <p>
+              Manages the finances, ensuring transparency in funds and supporting financial needs for crisis situations and professional development.
+            </p>
+          </div>
+        </div>
+
+        <div class="member-card">
+          <img src="image/pfp.jpeg" alt="" />
+          <div class="details">
+            <div class="designation">
+              <h3>Youth Wing</h3>
+            </div>
+            <h4>Person</h4>
+            <p>
+              Represent diverse regions and specializations, contributing to decisions on legal assistance, conflict resolution, and more.
+            </p>
+          </div>
         </div>
       </div>
-
-      <div class="member-card">
-        <img src="image/pfp.jpeg" alt="" />
-        <div class="details">
-          <div class="designation">
-            <h3>Syaappa</h3>
-          </div>
-          <h4>Hasti chudail</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-            vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
-            accusamus eius tenetur dolorum. Maxime?
-          </p>
-        </div>
-      </div>
-
-      <div class="member-card">
-        <img src="image/pfp.jpeg" alt="" />
-        <div class="details">
-          <div class="designation">
-            <h3>Syaappa</h3>
-          </div>
-          <h4>Hasti chudail</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-            vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
-            accusamus eius tenetur dolorum. Maxime?
-          </p>
-        </div>
-      </div>
-
-      <div class="member-card">
-        <img src="image/pfp.jpeg" alt="" />
-        <div class="details">
-          <div class="designation">
-            <h3>Syaappa</h3>
-          </div>
-          <h4>Hasti chudail</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-            vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
-            accusamus eius tenetur dolorum. Maxime?
-          </p>
-        </div>
-      </div>
-
-      <div class="member-card">
-        <img src="image/pfp.jpeg" alt="" />
-        <div class="details">
-          <div class="designation">
-            <h3>Syaappa</h3>
-          </div>
-          <h4>Hasti chudail</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-            vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
-            accusamus eius tenetur dolorum. Maxime?
-          </p>
-        </div>
-      </div>
-
-      <div class="member-card">
-        <img src="image/pfp.jpeg" alt="" />
-        <div class="details">
-          <div class="designation">
-            <h3>Syaappa</h3>
-          </div>
-          <h4>Hasti chudail</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
-            vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
-            accusamus eius tenetur dolorum. Maxime?
-          </p>
-        </div>
-      </div>
-
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="committee.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
