--- a/objective.html
+++ b/objective.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Objective</title>
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="objective.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav>
-        <div class="navbarContainer">
-            <div class="logo">
-                <img src="icons/logo.png" alt="logo_image">
-                <div class="logoTitle">
-                    <h4>संगठित पत्रकार संघ, (छ.ग.)</h4>
-                    <h4>Organized Journalists Association (C.G.)</h4>
-                    <h4>रजि . क्रमां क 122202146877</h4>
-                </div>
-            </div>
-            <div class="account-section">
-                <h4 class="sps-name">
-                    Our Social Handles :
-                </h4>
-                <div class="socialMedia">
-                    <a href=""><img src="icons/instagram_logo.png" alt="logo"></a>
-                    <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"><img src="icons/whatsapp_logo.png" alt="logo"></a>
-                    <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"><img src="icons/facebook_logo.png" alt="logo"></a>
-                </div>
-            </div>
+      <div class="navbarContainer">
+        <div class="logo">
+          <img src="icons/logo.png" alt="logo_image" />
+          <div class="logoTitle">
+            <h4>संगठित पत्रकार संघ, (छ.ग.)</h4>
+            <h4>Organized Journalists Association (C.G.)</h4>
+            <h4>रजि . क्रमां क 122202146877</h4>
+          </div>
         </div>
-        <div class="pages">
+        <div class="account-section">
+          <div class="socialMedia">
+            <a href=""><img src="icons/instagram_logo.png" alt="logo" /></a>
+            <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"
+              ><img src="icons/whatsapp_logo.png" alt="logo"
+            /></a>
+            <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"
+              ><img src="icons/facebook_logo.png" alt="logo"
+            /></a>
+          </div>
+        </div>
+        <div class="menu">
+          <div class="menuOpenClose">
+            <img class="menuOpen" src="icons/menu.svg" alt="open_icon" />
+            <img class="menuClose" src="icons/close.svg" alt="close_icon" />
+          </div>
+          <div class="menuPage">
             <a href="index.html"><h5>HOME</h5></a>
             <a href="about.html"><h5>ABOUT</h5></a>
             <a href="members.html"><h5>MEMBERS</h5></a>
@@ -39,8 +44,99 @@
             <a href="gallery.html"><h5>GALLERY</h5></a>
             <a href="directory.html"><h5>DIRECTORY</h5></a>
             <a href="contact.html"><h5>CONTACT</h5></a>
+          </div>
         </div>
+      </div>
     </nav>
-    <script src="objective.js"></script>
-</body>
+    <div class="pages">
+      <a href="index.html"><h5>HOME</h5></a>
+      <a href="about.html"><h5>ABOUT</h5></a>
+      <a href="members.html"><h5>MEMBERS</h5></a>
+      <a href="committee.html"><h5>COMMITTEE</h5></a>
+      <a href="objective.html"><h5>OBJECTIVE</h5></a>
+      <a href="events.html"><h5>EVENTS</h5></a>
+      <a href="gallery.html"><h5>GALLERY</h5></a>
+      <a href="directory.html"><h5>DIRECTORY</h5></a>
+      <a href="contact.html"><h5>CONTACT</h5></a>
+    </div>
+
+    <div class="objectivesInfo">
+      <h3 class="objectiveHeading">Objectives</h3>
+
+      <div class="slogansContainer">
+
+          <div class="slogan">
+            <h3>Professional Development</h3>
+            <p>
+              To continuously improve journalists' skills through training,
+              workshops, and seminars, ensuring they remain at the forefront of
+              the profession.
+            </p>
+          </div>
+
+          <div class="slogan">
+            <h3>Networking and Collaboration</h3>
+            <p>
+              To create opportunities for journalists to collaborate on stories, share knowledge, and build a strong professional network across the state and beyond.
+            </p>
+          </div>
+          
+          <div class="slogan">
+            <h3>Public Awareness</h3>
+            <p>
+              To educate the public on the role of journalism in democracy, enhancing the public’s understanding and appreciation of ethical reporting.
+            </p>
+          </div>
+
+          <div class="slogan">
+            <h3>Health and Welfare</h3>
+            <p>
+              To advocate for journalists' health and welfare, ensuring they have access to medical benefits, insurance, and other necessary support.
+            </p>
+          </div>
+
+          <div class="slogan">
+            <h3>Unionizing Journalists</h3>
+            <p>
+              To bring journalists together under a unified body, strengthening their collective bargaining power and ensuring they receive fair treatment.
+            </p>
+          </div>
+
+          <div class="slogan">
+            <h3>Awareness of Constitutional Rights</h3>
+            <p>
+              To educate journalists about their constitutional rights, empowering them to defend these rights and report freely and fearlessly.
+            </p>
+          </div>
+
+          <div class="slogan">
+            <h3>Creating a Strong Administrative Structure</h3>
+            <p>
+              To develop a robust administrative framework that ensures the smooth functioning of the association, transparency in operations, and accountability to its members.
+            </p>
+          </div>
+
+          <div class="slogan">
+            <h3>Bridging the Information Gap</h3>
+            <p>
+              To ensure that accurate and vital information reaches all journalists, particularly those in remote areas, enabling them to report effectively.
+            </p>
+          </div>
+        
+      </div>
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
