--- a/events.html
+++ b/events.html
@@ -5,31 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="events.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <div class="navbarContainer">
-            <div class="logo">
-                <img src="icons/logo.png" alt="logo_image">
-                <div class="logoTitle">
-                    <h4>संगठित पत्रकार संघ, (छ.ग.)</h4>
-                    <h4>Organized Journalists Association (C.G.)</h4>
-                    <h4>रजि . क्रमां क 122202146877</h4>
-                </div>
-            </div>
-            <div class="account-section">
-                <h4 class="sps-name">
-                    
-                </h4>
-                <div class="socialMedia">
-                  <a href=""><img src="icons/instagram_logo.png" alt="logo"></a>
-                  <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"><img src="icons/whatsapp_logo.png" alt="logo"></a>
-                  <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"><img src="icons/facebook_logo.png" alt="logo"></a>
-              </div>
-            </div>
+  <nav>
+    <div class="navbarContainer">
+      <div class="logo">
+        <img src="icons/logo.png" alt="logo_image" />
+        <div class="logoTitle">
+          <h4>संगठित पत्रकार संघ, (छ.ग.)</h4>
+          <h4>Organized Journalists Association (C.G.)</h4>
+          <h4>रजि . क्रमां क 122202146877</h4>
         </div>
-    </nav>
+      </div>
+      <div class="account-section">
+        <div class="socialMedia">
+          <a href=""><img src="icons/instagram_logo.png" alt="logo" /></a>
+          <a href="https://chat.whatsapp.com/I7ipSYhgu1WAhQAgKpWKd9"
+            ><img src="icons/whatsapp_logo.png" alt="logo"
+          /></a>
+          <a href="https://www.facebook.com/spscgfb?mibextid=LQQJ4d"
+            ><img src="icons/facebook_logo.png" alt="logo"
+          /></a>
+        </div>
+      </div>
+      <div class="menu">
+        <div class="menuOpenClose">
+          <img class="menuOpen" src="icons/menu.svg" alt="open_icon">
+          <img class="menuClose" src="icons/close.svg" alt="close_icon">
+        </div>
+        <div class="menuPage">
+          <a href="index.html"><h5>HOME</h5></a>
+          <a href="about.html"><h5>ABOUT</h5></a>
+          <a href="members.html"><h5>MEMBERS</h5></a>
+          <a href="committee.html"><h5>COMMITTEE</h5></a>
+          <a href="objective.html"><h5>OBJECTIVE</h5></a>
+          <a href="events.html"><h5>EVENTS</h5></a>
+          <a href="gallery.html"><h5>GALLERY</h5></a>
+          <a href="directory.html"><h5>DIRECTORY</h5></a>
+          <a href="contact.html"><h5>CONTACT</h5></a>
+        </div>
+      </div>
+    </div>
+  </nav>
     <div class="pages">
         <a href="index.html"><h5>HOME</h5></a>
         <a href="about.html"><h5>ABOUT</h5></a>
@@ -42,16 +60,16 @@
         <a href="contact.html"><h5>CONTACT</h5></a>
     </div>
 
-    <h3 class="heading">UPCOMING EVENTS</h3>
+    <h3 class="heading upcomingEventHeading">UPCOMING EVENTS</h3>
     <div class="eventCardsContainer">
 
       <div class="event-card">
         <img src="image/pfp.jpeg" alt="" />
         <div class="details">
           <div class="designation">
-            <h3>Syaappa</h3>
+            <h3>UPCOMING</h3>
           </div>
-          <h4>Hasti chudail</h4>
+          <h4>Event Name</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
             vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
@@ -64,9 +82,9 @@
         <img src="image/pfp.jpeg" alt="" />
         <div class="details">
           <div class="designation">
-            <h3>Syaappa</h3>
+            <h3>UPCOMING</h3>
           </div>
-          <h4>Hasti chudail</h4>
+          <h4>Event Name</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
             vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
@@ -77,16 +95,16 @@
 
     </div>
 
-    <h3 class="heading pastEventsHeading">PAST EVENTS</h3>
+    <h3 class="heading pastEventHeading">PAST EVENTS</h3>
     <div class="eventCardsContainer">
 
         <div class="event-card">
           <img src="image/pfp.jpeg" alt="" />
           <div class="details">
             <div class="designation">
-              <h3>Syaappa</h3>
+              <h3>UPCOMING</h3>
             </div>
-            <h4>Hasti chudail</h4>
+            <h4>Event Name</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
               vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
@@ -99,9 +117,9 @@
           <img src="image/pfp.jpeg" alt="" />
           <div class="details">
             <div class="designation">
-              <h3>Syaappa</h3>
+              <h3>UPCOMING</h3>
             </div>
-            <h4>Hasti chudail</h4>
+            <h4>Event Name</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
               vitae? Culpa delectus earum cum quidem ea voluptatibus voluptatem
@@ -112,10 +130,20 @@
   
       </div>
 
-    
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="events.js"></script>
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+    integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+    integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script src="script.js"></script>
 </body>
 </html>
